added email service

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -16,6 +17,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "pdfjs-dist": "^4.6.82",
@@ -23,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-pdf": "^9.1.1",
+    "react-toastify": "^10.0.6",
     "react-tsparticles": "^2.12.2",
     "scrollreveal": "^4.0.9",
     "tailwind-merge": "^2.5.2",
